// user service provider

// proto语法版本
syntax = "proto3";

// 可选参数 设置java package
// java
option java_multiple_files = true;
option java_package = "com.jd.hello.grpc.api";
option java_outer_classname = "UserProviderApi";

// golang
option go_package = "./";

// 定义包名
package com.jd.hello.grpc.api;

// 定义对外暴露的服务
service UserProvider {

    // 根据用户id获取用户信息的服务(具体服务/函数)
    rpc getByUserId(UserIdRequest) returns (UserVoReplay) {}
}

// 定义请求体
message UserIdRequest {
    uint64 id = 1;          // 用户id 类型为Long
}

// 定义响应内容
message UserVoReplay {
    uint64 id = 1;          // 用户id
    string username = 2;    // 用户名称
}
